Scroll to Top Create

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 <body>
     <!-- HEADER -->
-    <header class="header" role="banner">
+    <header class="header" role="banner" id="header">
         <div class="container header__inner">
             <!-- LOGO -->
             <a href="/" class="logo" aria-label="Wanderlust Adventures — Home">
@@ -335,10 +335,9 @@
                         </li>
                     </ul>
 
-                    <button class="footer-social__top" aria-label="Scroll to top">
-                        <img loading="lazy" decoding="async" src="assets/img/icons/btn-up.svg" alt="" width="20"
-                            height="20">
-                    </button>
+                    <a href="#header" class="footer-social__top" aria-label="Scroll to top">
+                        <img loading="lazy" decoding="async" src="assets/img/icons/btn-up.svg" width="20" height="20" alt="">
+                    </a>
                 </div>
 
                 <div class="footer-social__stores" aria-label="Download our app">
