--- a/index.html
+++ b/index.html
@@ -163,6 +163,83 @@
     </header>
     <!-- MAIN CONTENT -->
     <main class="main" id="main">
+        <!-- TESTIMONIALS -->
+        <section class="section testimonials">
+            <header class="testimonials__header">
+                <p class="testimonials__subtitle">Traveler Voices</p>
+                <h2 id="testimonials-title" class="testimonials__title">
+                    What Our Travelers Say About Their Journeys
+                </h2>
+            </header>
+            <div class="testimonials__slider" role="region" aria-label="Traveler testimonials">
+                <div class="testimonials__gallery">
+                    <div class="testimonials__gallery-inner">
+                        <figure class="testimonial testimonial--main testimonial--anim-main">
+                            <figcaption class="testimonial__author">
+                                <img loading="lazy" decoding="async" src="assets/img/content/user_1.webp" width="56"
+                                    height="56" alt="Photo of Elena Rhodes" class="testimonial__avatar">
+                            </figcaption>
+
+                            <blockquote class="testimonial__quote">
+                                I&nbsp;didn&rsquo;t want a&nbsp;trip full of&nbsp;noise, I&nbsp;wanted something calm,
+                                intentional, and beautifully organized. WA&nbsp;delivered exactly that. Everything felt
+                                seamless, from choosing the destination to&nbsp;the final moments of&nbsp;the journey.
+                            </blockquote>
+
+                            <figcaption class="testimonial__info">
+                                <strong class="testimonial__name">Elena Rhodes</strong>
+                                <span class="testimonial__location">San Francisco, USA</span>
+                            </figcaption>
+                        </figure>
+                        <figure class="testimonial testimonial--scnd">
+                            <figcaption class="testimonial__author">
+                                <img loading="lazy" decoding="async" src="assets/img/content/user_2.webp" width="56"
+                                    height="56" alt="Photo of Marcus Evans" class="testimonial__avatar">
+                            </figcaption>
+
+                            <blockquote class="testimonial__quote">
+                                What impressed me&nbsp;the most was how personal the entire experience felt. Not generic
+                                recommendations&nbsp;&mdash; but thoughtful routes that matched what&nbsp;I actually
+                                enjoy.
+                            </blockquote>
+
+                            <figcaption class="testimonial__info">
+                                <strong class="testimonial__name">Marcus Evans</strong>
+                                <span class="testimonial__location">Sydney, Australia</span>
+                            </figcaption>
+                        </figure>
+                        <figure class="testimonial testimonial--thrd">
+                            <figcaption class="testimonial__author">
+                                <img loading="lazy" decoding="async" src="assets/img/content/user_3.webp" width="56"
+                                    height="56" alt="Photo of Sofia Martins" class="testimonial__avatar">
+                            </figcaption>
+
+                            <blockquote class="testimonial__quote">
+                                Planning was effortless, the communication was clear, and the trip itself felt like
+                                a&nbsp;breath of&nbsp;fresh air. I&nbsp;came home inspired, not exhausted and
+                                that&rsquo;s rare.
+                            </blockquote>
+
+                            <figcaption class="testimonial__info">
+                                <strong class="testimonial__name">Sofia Martins</strong>
+                                <span class="testimonial__location">Lisbon, Portugal</span>
+                            </figcaption>
+                        </figure>
+                    </div>
+                </div>
+
+                <div class="testimonials__nav" aria-hidden="false">
+                    <button class="testimonials__prev" aria-label="Previous testimonial" disabled>
+                        <img src="assets/img/icons/arrow-down.svg" width="24" height="24" alt=""
+                            class="testimonials__icon">
+                    </button>
+                    <button class="testimonials__next" aria-label="Next testimonial">
+                        <img src="assets/img/icons/arrow-down.svg" width="24" height="24" alt=""
+                            class="testimonials__icon">
+                    </button>
+                </div>
+            </div>
+        </section>
         <!-- TRICKER -->
         <section class="tricker">
             <h2 class="tricker__title">Our Partners</h2>
@@ -214,7 +291,7 @@
                     <div class="cta__title-field">
                         <h2 class="cta__title">Stay Inspired. Travel Smarter.</h2>
                         <p class="cta__desc">Get curated travel tips, seasonal highlights, and exclusive updates from
-                            Wanderlust Adventures — straight to your inbox.</p>
+                            Wanderlust Adventures&nbsp;&mdash; straight to&nbsp;your inbox.</p>
                     </div>
                     <form class="subscribe" action="#" method="post">
                         <label for="subscribe-email" class="subscribe__label">
@@ -237,8 +314,8 @@
         </section>
     </main>
     <!-- FOOTER -->
-    <footer class="footer" id="footer" role="contentinfo">
-        <div class="section footer__top">
+    <footer class="footer section" id="footer" role="contentinfo">
+        <div class="footer__top">
             <section class="footer__col footer__col--brand">
                 <a href="/" class="logo" aria-label="Wanderlust Adventures — Home">
                     <img loading="lazy" decoding="async" src="assets/img/content/logo.svg"
@@ -336,7 +413,8 @@
                     </ul>
 
                     <a href="#header" class="footer-social__top" aria-label="Scroll to top">
-                        <img loading="lazy" decoding="async" src="assets/img/icons/btn-up.svg" width="20" height="20" alt="">
+                        <img loading="lazy" decoding="async" src="assets/img/icons/btn-up.svg" width="20" height="20"
+                            alt="">
                     </a>
                 </div>
 
@@ -356,83 +434,14 @@
             </section>
         </div>
         <div class="copyright">
-            <p class="caption">2025 © All rights Reserved.</p>
-        </div>
-        <div class="dev">
-            <div class="dev__inner platforms">
-                <h3 class="dev__title">Professional Platforms</h3>
-                <ul class="dev__list dev__list--platforms">
-                    <li class="dev__item">
-                        <a href="https://github.com/anzhelikaspekter" target="_blank" class="dev__link"
-                            rel="noopener noreferrer">
-                            <img loading="lazy" decoding="async" src="assets/img/personal/github.svg" width="20"
-                                height="20" alt="GitHub — Anzhelika Spekter" class="dev__logo" id="github">
-                        </a>
-                    </li>
-                    <li class="dev__item">
-                        <a href="https://codepen.io/anzhelikaspekter" target="_blank" class="dev__link"
-                            rel="noopener noreferrer">
-                            <img loading="lazy" decoding="async" src="assets/img/personal/codepen.svg" width="20"
-                                height="20" alt="Codepen — Anzhelika Spekter" class="dev__logo" id="codepen">
-                        </a>
-                    </li>
-                    <li class="dev__item">
-                        <a href="https://www.behance.net/anzhelikaspekter" target="_blank" class="dev__link"
-                            rel="noopener noreferrer">
-                            <img loading="lazy" decoding="async" src="assets/img/personal/behance.svg" width="20"
-                                height="20" alt="Behance — Anzhelika Spekter" class="dev__logo" id="behance">
-                        </a>
-                    </li>
-                    <li class="dev__item">
-                        <a href="https://dribbble.com/anzhelikaspekter" target="_blank" class="dev__link"
-                            rel="noopener noreferrer">
-                            <img loading="lazy" decoding="async" src="assets/img/personal/dribbble.svg" width="20"
-                                height="20" alt="Dribbble — Anzhelika Spekter" class="dev__logo" id="dribbble">
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <p class="dev__caption caption"><span>Designed & Built by Anzhelika Spekter</span> <span>© 2025</span></p>
-            <div class="dev__inner networks">
-                <h3 class="dev__title">Social Networks</h3>
-                <ul class="dev__list dev__list--networks">
-                    <li class="dev__item">
-                        <a href="https://www.linkedin.com/in/anzhelikaspekter" target="_blank" class="dev__link"
-                            rel="noopener noreferrer">
-                            <img loading="lazy" decoding="async" src="assets/img/personal/linkedin.svg" width="100"
-                                height="20" alt="LinkedIn — Anzhelika Spekter" class="dev__logo" id="linkedin">
-                        </a>
-                    </li>
-                    <li class="dev__item">
-                        <a href="https://instagram.com/spekter.solutions" target="_blank" class="dev__link"
-                            rel="noopener noreferrer">
-                            <img loading="lazy" decoding="async" src="assets/img/personal/instagram.svg" width="100"
-                                height="20" alt="Instagram — Anzhelika Spekter" class="dev__logo" id="instagram">
-                        </a>
-                    </li>
-                    <li class="dev__item">
-                        <a href="https://www.pinterest.com/spektersolutions" target="_blank" class="dev__link"
-                            rel="noopener noreferrer">
-                            <img loading="lazy" decoding="async" src="assets/img/personal/pinterest.svg" width="20"
-                                height="20" alt="Pinterest — Anzhelika Spekter" class="dev__logo" id="pinterest">
-                        </a>
-                    </li>
-                    <li class="dev__item">
-                        <a href="https://www.tiktok.com/@spekter.solutions" target="_blank" class="dev__link"
-                            rel="noopener noreferrer">
-                            <img loading="lazy" decoding="async" src="assets/img/personal/tiktok.svg" width="20"
-                                height="20" alt="TikTok — Anzhelika Spekter" class="dev__logo" id="tiktok">
-                        </a>
-                    </li>
-                </ul>
-            </div>
+            <p class="caption">2025&nbsp;&copy; All rights Reserved.</p>
         </div>
     </footer>
     <!-- Scripts -->
     <script src="assets/js/components/select.js" defer></script>
     <script src="assets/js/components/mobile-nav.js" defer></script>
     <script src="assets/js/components/tricker.js" defer></script>
-    <script src="assets/js/main.js" defer></script>
+    <script src="assets/js/components/testimonials.js" defer></script>
 </body>
 
 </html>
