--- a/index.html
+++ b/index.html
@@ -4,58 +4,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <!-- Primary Meta -->
     <title>Wanderlust Adventures — Travel Smarter, Explore the World</title>
     <meta name="description"
-        content="Plan your next adventure with ease. Explore top destinations, weather insights, best flight options, and personalized travel itineraries for any budget and style." />
+        content="Plan your next adventure with ease. Explore top destinations, weather insights, best flight options, and personalized travel itineraries for any budget and style.">
     <meta name="keywords"
-        content="travel, tours, best flights, travel planning, destinations, personalized trips, travel agency, adventures, vacations" />
-    <!-- Author & Ownership -->
-    <meta name="author" content="Anzhelika Spekter" />
-    <meta name="copyright" content="© 2025 Wanderlust Adventures" />
-    <meta name="publisher" content="Anzhelika Spekter" />
-    <!-- Open Graph / Facebook / LinkedIn -->
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="Wanderlust Adventures — Your Next Great Travel Experience" />
+        content="travel, tours, best flights, travel planning, destinations, personalized trips, travel agency, adventures, vacations">
+
+    <!-- Author -->
+    <meta name="author" content="Anzhelika Spekter">
+    <meta name="copyright" content="© 2025 Wanderlust Adventures">
+    <meta name="publisher" content="Anzhelika Spekter">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Wanderlust Adventures — Your Next Great Travel Experience">
     <meta property="og:description"
-        content="Discover top destinations, secure the best flights, enjoy curated experiences, and plan your trip effortlessly." />
-    <meta property="og:image" content="/assets/img/og/og-image.png" />
-    <meta property="og:url" content="https://example.com" />
-    <meta property="og:site_name" content="Wanderlust Adventures" />
+        content="Discover top destinations, secure the best flights, enjoy curated experiences, and plan your trip effortlessly.">
+    <meta property="og:image" content="/assets/img/og/og-image.png">
+    <meta property="og:url" content="https://example.com">
+    <meta property="og:site_name" content="Wanderlust Adventures">
+
     <!-- Twitter -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Wanderlust Adventures — Travel Made Easy" />
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Wanderlust Adventures — Travel Made Easy">
     <meta name="twitter:description"
-        content="Plan unforgettable trips with curated guides, best flight deals, and personalized travel services." />
-    <meta name="twitter:image" content="/assets/img/og/og-image.png" />
+        content="Plan unforgettable trips with curated guides, best flight deals, and personalized travel services.">
+    <meta name="twitter:image" content="/assets/img/og/og-image.png">
+
     <!-- Favicons -->
-    <link rel="icon" type="image/x-icon" href="/assets/img/favicons/favicon.ico?v=1">
+    <link rel="icon" href="/assets/img/favicons/favicon.ico?v=1">
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicons/favicon-32.png?v=1">
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicons/favicon-16.png?v=1">
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicons/apple-touch-icon.png?v=1">
     <link rel="mask-icon" href="/assets/img/favicons/safari-pinned-tab.svg?v=1" color="#0D1117">
-    <!-- Manifest -->
     <link rel="manifest" href="/site.webmanifest">
-    <!-- Theme colors for mobile -->
+
+    <!-- Theme -->
     <meta name="theme-color" content="#0D1117">
     <meta name="apple-mobile-web-app-status-bar" content="#0D1117">
-    <!-- Preload & Preconnect -->
-    <link rel="preload" as="image" href="assets/img/content/cta.webp" imagesrcset="assets/img/content/cta.webp">
+
+    <!-- Fonts (optimized preload + fallback) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preload"
-        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
-        as="style">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
-        rel="stylesheet">
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;600;700&display=swap"
+        as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript>
+        <link rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;600;700&display=swap">
+    </noscript>
+
+    <!-- Preload LCP -->
+    <link rel="preload" as="image" href="assets/img/content/cta.webp" imagesrcset="assets/img/content/cta.webp">
+
+
     <!-- Styles -->
     <link rel="preload" href="assets/css/style.min.css" as="style">
-    <link rel="stylesheet" href="assets/css/style.min.css" media="print" onload="this.media='all'">
-    <noscript>
-        <link rel="stylesheet" href="assets/css/style.min.css">
-    </noscript>
+    <link rel="stylesheet" href="assets/css/style.min.css">
 </head>
+
 
 <body>
     <!-- HEADER -->
