Destination Section Complete

--- a/index.html
+++ b/index.html
@@ -172,6 +172,47 @@
     </header>
     <!-- MAIN CONTENT -->
     <main class="main" id="main">
+        <!-- OFFER -->
+        <section class="section offer" id="destinations" aria-labelledby="offer-title">
+            <header class="offer__header">
+                <p class="offer__subtitle">What We Offer</p>
+                <h2 id="offer-title" class="offer__title">Our Best Travel Services</h2>
+            </header>
+            <ul class="offer__list">
+                <li class="offer__item">
+                    <article class="destination-card">
+                        <img src="assets/img/icons/weather.svg" width="64" height="64" alt="Travel weather icon"
+                            class="destination-card__icon">
+                        <h3 class="destination-card__title">Travel Weather</h3>
+                        <p class="destination-card__desc">Get accurate weather insights for every destination to&nbsp;plan your trip with confidence.</p>
+                    </article>
+                </li>
+                <li class="offer__item">
+                    <article class="destination-card">
+                        <img src="assets/img/icons/experiences.svg" width="64" height="64" alt="Local experiences icon" 
+                            class="destination-card__icon">
+                        <h3 class="destination-card__title">Local Experiences</h3>
+                        <p class="destination-card__desc">Discover unique activities, festivals and events that bring each destination to&nbsp;life.</p>
+                    </article>
+                </li>
+                <li class="offer__item">
+                    <article class="destination-card">
+                        <img src="assets/img/icons/flight-plane.svg" width="64" height="64" alt="Flight booking icon"
+                            class="destination-card__icon">
+                        <h3 class="destination-card__title">Best Flight Options</h3>
+                        <p class="destination-card__desc">Find ideal flights with the best routes, prices and schedules&nbsp;&mdash; all in&nbsp;one place.</p>
+                    </article>
+                </li>
+                <li class="offer__item">
+                    <article class="destination-card">
+                        <img src="assets/img/icons/trips.svg" width="64" height="64" alt="Personalized trips icon"
+                            class="destination-card__icon">
+                        <h3 class="destination-card__title">Personalized Trips</h3>
+                        <p class="destination-card__desc">Enjoy custom itineraries tailored to&nbsp;your interests, budget, and travel style.</p>
+                    </article>
+                </li>
+            </ul>
+        </section>
         <!-- TOP TOURS -->
         <section class="section tours" id="tours" aria-labelledby="tours-title">
             <header class="tours__header">
@@ -357,7 +398,7 @@
             </div>
         </section>
         <!-- TESTIMONIALS -->
-        <section class="section testimonials" id="reviews">
+        <section class="section testimonials" id="reviews" aria-labelledby="reviews-title">
             <header class="testimonials__header">
                 <p class="testimonials__subtitle">Traveler Voices</p>
                 <h2 id="testimonials-title" class="testimonials__title">
